--- a/index.html
+++ b/index.html
@@ -106,15 +106,16 @@
 </head>
 <body>
   <div class="gallery">
-    <img src="/image/Nos1.jpg">
-    <img src="/image/Nos2.jpg">
-    <img src="/image/Nos3.jpg">
-    <img src="/image/Nos4.jpg">
-    <img src="/image/Nos5.jpg">
-    <img src="/image/Nos6.jpg">
-    <img src="/image/Nos7.jpg">
-    <img src="/image/Nos8.jpg">
+    <img src="Nos1.jpg">
+    <img src="Nos2.jpg">
+    <img src="Nos3.jpg">
+    <img src="Nos4.jpg">
+    <img src="Nos5.jpg">
+    <img src="Nos6.jpg">
+    <img src="Nos7.jpg">
+    <img src="Nos8.jpg">
   </div>
   <div class="caption">foi um dia maravilhoso, e eu adoraria repetir a dose. Cada instante parecia eterno, cada riso era mais doce, e a leveza daquele momento ficará comigo para sempre.</div>
 </body>
+
 </html>
